[package]
name = "mtd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20.0", features=["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3.61"
rainfrog = { path = "rainfrog" }
owtypes = { path = "owtypes"}
log = "0.4"
console_log = "0.2"
